@@ -1,6 +1,5 @@
 package com.iamjunhyeok.review.controller;
 
-import com.iamjunhyeok.review.domain.Application;
 import com.iamjunhyeok.review.dto.ApplicantSearchResponse;
 import com.iamjunhyeok.review.dto.ApplicationCancelRequest;
 import com.iamjunhyeok.review.dto.ApplicationViewResponse;
@@ -9,19 +8,18 @@ import com.iamjunhyeok.review.dto.CampaignApplyResponse;
 import com.iamjunhyeok.review.service.ApplicationService;
 import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.DeleteMapping;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PatchMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.ResponseStatus;
 import org.springframework.web.bind.annotation.RestController;
-import org.springframework.web.util.UriComponentsBuilder;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/campaigns")
@@ -32,13 +30,7 @@ public class ApplicationController {
 
     @PostMapping("/{campaignId}/applications")
     public ResponseEntity<CampaignApplyResponse> apply(@PathVariable Long campaignId, @RequestBody CampaignApplyRequest request) {
-        Application application = applicationService.apply(campaignId, request);
-        return ResponseEntity.created(
-                UriComponentsBuilder
-                        .fromPath("/campaigns/{campaignId}/applications/{id}")
-                        .buildAndExpand(campaignId, application.getId())
-                        .toUri()
-        ).build();
+        return ResponseEntity.status(HttpStatus.CREATED).body(CampaignApplyResponse.from(applicationService.apply(campaignId, request)));
     }
 
     @GetMapping("/{campaignId}/applications/{id}")
@@ -46,30 +38,26 @@ public class ApplicationController {
         return ResponseEntity.ok(ApplicationViewResponse.from(applicationService.findByIdAndCampaignId(campaignId, id)));
     }
 
-    @DeleteMapping("/{campaignId}/applications/{id}")
-    public ResponseEntity<Void> cancel(@PathVariable Long campaignId, @PathVariable Long id, @RequestBody @Valid ApplicationCancelRequest request) {
+    @PatchMapping("/{campaignId}/applications/{id}/cancel")
+    @ResponseStatus(HttpStatus.OK)
+    public void cancel(@PathVariable Long campaignId, @PathVariable Long id, @RequestBody @Valid ApplicationCancelRequest request) {
         applicationService.cancel(campaignId, id, request);
-        return ResponseEntity.noContent().build();
     }
 
     @PatchMapping("/{campaignId}/applications/{id}/approve")
-    public ResponseEntity<Void> approve(@PathVariable Long campaignId, @PathVariable Long id) {
+    @ResponseStatus(HttpStatus.OK)
+    public void approve(@PathVariable Long campaignId, @PathVariable Long id) {
         applicationService.approve(campaignId, id);
-        return ResponseEntity.ok().build();
-    }
-
-    @PatchMapping("/{campaignId}/applications/{id}/reject")
-    public ResponseEntity<Void> reject(@PathVariable Long campaignId, @PathVariable Long id) {
-        applicationService.reject(campaignId, id);
-        return ResponseEntity.ok().build();
     }
 
     @GetMapping("/{campaignId}/applications")
-    public ResponseEntity<List<ApplicantSearchResponse>> searchApplicant(@PathVariable Long campaignId) {
+    public ResponseEntity<List<ApplicantSearchResponse>> searchApplicants(@PathVariable Long campaignId) {
         return ResponseEntity.ok(
-                applicationService.searchApplicant(campaignId)
-                        .stream().map(ApplicantSearchResponse::from)
-                        .collect(Collectors.toList())
+                applicationService.searchApplicants(campaignId)
+                        .stream()
+                        .map(ApplicantSearchResponse::from)
+                        .toList()
         );
     }
+
 }
